--- a/src/text.css
+++ b/src/text.css
@@ -4,8 +4,8 @@
 button{
     color: blue;
 }
-.banner-img{
+/* .banner-img{
     height: 100vh;
     width: 50%;
     border:2PX solid blue;
-}
+} */
